# lihu-ansible

./: .ansible-lint.yaml  .yamllintrc.yaml  README.md  pyproject.toml  tox.ini
playbooks/: bootstrap_dnf_bindings.yml  bootstrap_package_manager_bindings.yml  configure_environment.yml  everything.yml  install_dotfiles.yml  install_misc_software.yml  install_mpw.yml  install_slack.yml
