[tool.poetry]
name = "lihu-ansible"
version = "0.0.0"
description = "Automation for bootstrapping Lihu's workstation"
authors = ["Lihu Ben-Ezri-Ravin <lihu@yoloswag.lol>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.3.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
yamllint = "^1.26.1"
safety = "^1.10.3"
ansible-lint = "^5.0.7"
tox-poetry-installer = {version = "^0.7.0", extras = ["poetry"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
